# mocra

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  Design_Distributed_Cron.md  LICENSE-APACHE  LICENSE-MIT  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  Optimization_Report.md  PROMPT.md  QUICKSTART_OPTIMIZATION.md  README.md  README.zh.md  README_ZH.md  Redis_Compression_Optimization.md  docker-compose.kafka.yml  docker-compose.monitoring.yml  prompt-python.md  seed_data.sql  start.bat
benchmarks/mocra_bench/: Cargo.toml
benchmarks/mocra_bench/src/: main.rs
cacheable/: Cargo.toml
cacheable/src/: cache_service.rs  lib.rs
cacheable/src/cache_service/: backend.rs  cache_able.rs  local_backend.rs  redis_backend.rs  service.rs  two_level_backend.rs
common/: Cargo.toml
common/src/: lib.rs  policy.rs  registry.rs  state.rs  status_tracker.rs  stream_stats.rs
common/src/config/: file.rs  mod.rs  redis.rs
common/src/interface/: data_store.rs  middleware.rs  middleware_manager.rs  mod.rs  module.rs  storage.rs
common/src/middleware/: js.rs  mod.rs
common/src/model/: chain_key.rs  config.rs  context.rs  cookies.rs  cron_config.rs  data.rs  download_config.rs  headers.rs  logger_config.rs  login_info.rs  message.rs  meta.rs  mod.rs  model_config.rs  priority.rs  request.rs  response.rs  serde_value.rs
common/src/processors/: mod.rs  processor.rs  processor_chain.rs
common/src/storage/: file.rs
crates/mocra-cluster/: Cargo.toml  README.md
crates/mocra-cluster/src/: cmd.rs  control.rs  lib.rs  partition.rs  raft.rs  raft_http.rs  raft_log_store.rs  raft_network.rs  raft_node.rs  raft_store.rs  state_machine.rs
crates/mocra-core/: Cargo.toml  README.md
crates/mocra-core/dashboard/: index.html
crates/mocra-core/src/: lib.rs
crates/mocra-dag/: Cargo.toml  README.md
crates/mocra-dag/src/: fencing.rs  graph.rs  lib.rs  metrics.rs  remote_redis.rs  scheduler.rs  store.rs  types.rs
crates/mocra-proxy/: Cargo.toml  README.md
crates/mocra-proxy/src/: error.rs  lib.rs  proxy_impl.rs  proxy_manager.rs  proxy_pool.rs
crates/mocra-store/: Cargo.toml  README.md
crates/mocra-store/src/: lib.rs
downloader/: Cargo.toml
downloader/src/: downloader_manager.rs  lib.rs  remote_downloader.rs  request_downloader.rs  websocket_downloader.rs
engine/: Cargo.toml
engine/lua/: etm_retry_schedule.lua
engine/src/: deduplication.rs  engine.rs  lib.rs  monitor.rs  runner.rs  scheduler.rs  zombie.rs
engine/src/api/: auth.rs  control.rs  dlq.rs  health.rs  limit.rs  mod.rs  router.rs  state.rs
engine/src/chain/: backpressure.rs  download_chain.rs  mod.rs  parser_chain.rs  stream_chain.rs  task_model_chain.rs
engine/src/engine/: processors.rs  runtime.rs  tests.rs
engine/src/events/: db_event_handler.rs  event_bus.rs  events.rs  mod.rs  redis_event_handler.rs  redis_event_monitor.rs
engine/src/lua/: registry.rs
engine/src/processors/: event_processor.rs
engine/src/task/: assembler.rs  factory.rs  middleware.rs  mod.rs  module.rs  module_processor_with_chain.rs  repository.rs  task.rs  (+1 more)
python_mocra/: .env  DEVELOPMENT.md  DIFF_REPORT.md  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  TODO.md  main.py  mocra.db  output_data.jsonl  pyproject.toml  seed.py
python_mocra/cacheable/: service.py
python_mocra/common/: db.py  registry.py  state.py  status_tracker.py
python_mocra/downloader/: cache.py  client.py  manager.py  websocket.py
python_mocra/engine/: worker.py
python_mocra/errors/: __init__.py  error.py  error_stats.py
python_mocra/js_v8/: __init__.py  runtime.py
python_mocra/modules/: demo.py  moc_dev.py  mock_dev.py
python_mocra/mq/: compression.py  interface.py  kafka_backend.py  memory_backend.py  redis_backend.py
python_mocra/proxy/: manager.py  pool.py  providers.py
python_mocra/sync/: __init__.py  backend.py  distributed.py  kafka_backend.py  leader.py  lock.py  redis_backend.py
python_mocra/tests/: benchmark.py  benchmark_compare_scrapy_redis.py  benchmark_prod_like.py  benchmark_pure_engine.py  benchmark_real_world.py  test_cache_headers_cookies.py  test_cache_localbackend.py  test_cache_service_integration.py  test_core_functionality.py  test_distributed_lock.py  test_event_bus.py  test_full_cycle.py  test_integration.py  test_kafka_coordination_backend.py  test_moc_dev_module.py  test_mock_dev_module.py  test_mq_compression.py  test_node_registry.py  test_proxy_providers.py  test_rate_limiters.py  test_redis_queue_backend.py  test_request_downloader_mock.py  test_response_cache.py  test_status_tracker_success.py  test_sync_namespace_isolation.py  test_sync_optimistic_update.py  test_sync_redis_backend.py  test_websocket_downloader.py
python_mocra/utils/: __init__.py  batch_buffer.py  connector.py  date_utils.py  device_info.py  distributed_rate_limit.py  encrypt.py  excel_dataframe.py  logger.py  polars_utils.py  rate_limit.py  redis_lock.py  storage.py  string_case.py  to_numeric.py  type_convert.py
queue/: Cargo.toml
queue/src/: batcher.rs  channel.rs  compensation.rs  kafka.rs  lib.rs  manager.rs  redis.rs  tests.rs
sync/: Cargo.toml  Rust_Redis_Distributed_Sync.md
sync/src/: backend.rs  distributed.rs  kafka.rs  leader.rs  lib.rs  redis.rs
tests/: Cargo.toml  analyze_latest_log.py  analyze_stages.py  config.dag_e2e.toml  config.dev.toml  config.mock.pure.engine.toml  config.mock.pure.toml  config.mock.toml  config.prod_like.toml  config.test.toml  config.toml  init.sql  init_sqlite.sql  init_sqlite_pure.sql  log_analyzer.py  performance_analysis.py
tests/js/: bdms.js
tests/src/: benchmark_redis.rs  dag_module_trait_e2e.rs  full_cycle.rs  httpbin_prometheus_benchmark.rs  log_stress.rs  main.rs  mock_benchmark.rs  mock_engine_benchmark.rs  mock_prod_like_benchmark.rs  session_e2e.rs  test_cache_performance.rs
utils/: Cargo.toml
utils/src/: batch_buffer.rs  connector.rs  date_utils.rs  device_info.rs  distributed_rate_limit.rs  encrypt.rs  excel_dataframe.rs  lib.rs  logger.rs  polars_utils.rs  rate_limit.rs  redis_lock.rs  storage.rs  string_case.rs  to_numeric.rs  txn.rs  type_convert.rs
(+631 files in other folders)
