# workspace:root 包(mocra)+ crates/ 下的成员。
# 详见 docs/refactor/04-roadmap.md。
[workspace]
resolver = "2"
members = ["crates/mocra-cluster", "crates/mocra-proxy", "crates/mocra-dag", "crates/mocra-store"]

[package]
name = "mocra"
version = "0.2.16"
edition = "2024"
description = "A distributed, event-driven crawling and data collection framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra"
readme = "README.md"
rust-version = "1.85"
keywords = ["crawler", "distributed", "queue", "scraping", "framework"]
categories = ["network-programming", "asynchronous", "web-programming"]
autotests = false
exclude = [
	"target/**",
	"data/**",
	"logs/**",
	"tests/logs/**",
	"docker-compose.kafka.yml",
	"scripts/**",
	".github/**",
	".idea/**",
	"*.log",
]

# docs.rs 用全特性构建,确保被特性门控的条目(如 cluster-embedded 的 API、
# dashboard 可观测类型)在文档站可见,且 intra-doc 链接可解析。
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "native-tls", "brotli","form", "cookies", "json", "socks", "gzip", "deflate", "zstd", "hickory-dns", "stream"] }
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
toml = "0.9"
uuid = { version = "1", features = ["serde", "v7","zerocopy", "v4"] }
url = "2"
serde_json = "1"
rmp-serde = "1.3"
tokio = { version = "1", features = ["full"] }
deadpool-redis = { version = "0.22", features = ["json", "script", "serde","streams"] }
sea-orm = { version = "1", features = ["postgres-array", "runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"], optional = true }
redis = { version = "0.32", features = ["tokio-comp", "safe_iterators", "tokio-native-tls-comp"] }
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }
async-nats = { version = "0.38", optional = true }
futures = "0.3"
log = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-log = "0.2"
once_cell = "1"
reqwest_cookie_store = { version = "0.10", features = ["serde"] }
v8 = { version = "145", optional = true }
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
polars = { version = "0.52.0", features = ["json", "lazy", "serde", "csv", "timezones", "strings", "ipc", "dtype-decimal"], optional = true }
polars-lazy = { version = "0.52.0", features = ["pivot"], optional = true }
polars-ops = { version = "0.52.0", features = ["pivot"], optional = true }
chrono-tz = "0.10"
calamine = { version = "0.33.0", features = ["chrono", "dates"], optional = true }
semver = { version = "1", features = ["serde"] }
dyn-clone = { version = "1" }
base64 = { version = "0.22" }
ring = { version = "0.17" }
md5 = "0.8"
regex = { version = "1" }
urlencoding = "2"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"], optional = true }
dashmap = "6"
futures-util = "0.3"
rand = "0.9.2"
serde_urlencoded = "0.7"
sha1 = "0.10"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
zstd = "0.13"
mimalloc = { version = "0.1", default-features = false, optional = true }
serde_path_to_error = "0.1"
crc32fast = "1.5.0"
flate2 = "1.1.9"
cron = "0.15"
sysinfo = "0.38"
bloomfilter = "3"
siphasher = "1"
tempfile = "3"
indexmap = { version = "2", features = ["serde"] }
# 内嵌控制面(redb + Raft)。默认关闭;开启后可用 Raft 替换 Redis 协调。
mocra-cluster = { path = "crates/mocra-cluster", optional = true }
mocra-proxy = { path = "crates/mocra-proxy" }
mocra-dag = { path = "crates/mocra-dag" }
mocra-store = { path = "crates/mocra-store", optional = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true


[features]
default = ["mimalloc"]
js-v8 = ["dep:v8"]
mimalloc = ["dep:mimalloc"]
# 数据帧支持(polars)。默认关闭 —— 现有采集管线不依赖它,开启后解锁
# `DataFrameStore` / `polars_utils` 等表格数据能力。
polars = ["dep:polars", "dep:polars-lazy", "dep:polars-ops"]
# Excel 解析(calamine → DataFrame),隐含开启 polars。
excel = ["dep:calamine", "polars"]
# 数据面 Kafka 队列后端(默认关闭 —— 避免 rdkafka 的 cmake/C++ 构建负担)。
queue-kafka = ["dep:rdkafka"]
# 数据面 NATS(JetStream)队列后端 —— 轻量、无需 Redis,适合内嵌集群的数据面。
queue-nats = ["dep:async-nats"]
# 数据库 / 多租户元数据存储(sea-orm)。默认关闭 —— 无 DB standalone 模式不需要;
# 开启后解锁 account × platform × module 的 DB 驱动任务模型。
store = ["dep:sea-orm", "dep:mocra-store"]
# 内嵌 redb+Raft 控制面。开启后 `RaftCoordinationBackend` 实现 `CoordinationBackend`,
# 可用自组网的 Raft 集群替换 Redis 协调(锁 / 选举 / KV)。
cluster-embedded = ["dep:mocra-cluster"]
# 后台管理 dashboard:开启后 engine 暴露 admin + 可观测 HTTP API(任务 / 集群 / 指标监控)。
dashboard = ["dep:tower-http"]

[lib]
name = "mocra"
path = "src/lib.rs"

# 门面快速上手(无 DB / 无 Redis 单机)。
[[example]]
name = "spider_quickstart"
path = "examples/spider_quickstart.rs"

# 内嵌集群示例:需 cluster-embedded(用到 `ClusterConfig`)。
[[example]]
name = "cluster_quickstart"
path = "examples/cluster_quickstart.rs"
required-features = ["cluster-embedded"]

# 后台管理 dashboard 示例:需 dashboard(用到 `.dashboard(port)`)。
[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["dashboard"]
