# workspace:root 包(mocra)+ crates/ 下的成员。
# 详见 docs/refactor/04-roadmap.md。
[workspace]
resolver = "2"
members = ["crates/mocra-cluster", "crates/mocra-proxy", "crates/mocra-dag", "crates/mocra-store", "crates/mocra-core"]

[package]
name = "mocra"
version = "0.4.0"
edition = "2024"
description = "A distributed, event-driven crawling and data collection framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra"
readme = "README.md"
rust-version = "1.85"
keywords = ["crawler", "distributed", "queue", "scraping", "framework"]
categories = ["network-programming", "asynchronous", "web-programming"]
autotests = false
exclude = [
	"target/**",
	"data/**",
	"logs/**",
	"tests/logs/**",
	"docker-compose.kafka.yml",
	"scripts/**",
	"benchmarks/**",
	".github/**",
	".idea/**",
	".cargo/**",
	".claude/**",
	"*.log",
]

# docs.rs 构建的特性集:覆盖所有值得上文档的特性,但**排除** js-v8(内嵌 C++ v8 构建)与
# queue-kafka(rdkafka 需 librdkafka 的 C 构建)—— 这两个在 docs.rs 上易构建失败,且公开表面很小。
[package.metadata.docs.rs]
features = ["store", "dashboard", "cluster-embedded", "queue-nats", "polars", "excel"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# 运行时:全部引擎/管线逻辑都在 mocra-core;host 仅是薄门面(facade + prelude + 各层 shim)。
# 因此这里只保留门面/bin 直接用到的依赖 + 特性门控的可选依赖 —— 其余(axum、redis、
# tracing 等)都是 mocra-core 的传递依赖,host 不再直接声明。
mocra-core = { path = "crates/mocra-core", version = "0.4.0" }
mocra-proxy = { path = "crates/mocra-proxy", version = "0.4.0" }
# 门面(src/facade.rs、src/prelude.rs、src/lib.rs、src/bin/)直接用到的依赖。
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v7", "zerocopy", "v4"] }
# 全局分配器(默认特性 `mimalloc` 开启)。
mimalloc = { version = "0.1", default-features = false, optional = true }
# 特性门控的可选依赖。
mocra-cluster = { path = "crates/mocra-cluster", version = "0.4.0", optional = true } # cluster-embedded:门面 ClusterConfig
v8 = { version = "145", optional = true }                          # js-v8:内嵌 JS 运行时
tempfile = { version = "3", optional = true }                      # js-v8:worker 临时文件
# polars 三件套:host prelude 在 `polars` / `excel` 特性下再导出 `::polars::*`(供下游用 DataFrame
# 相关类型时版本对齐),故 host 需要直接(可选)依赖它们 —— 仅在这些特性开启时才编译。
polars = { version = "0.52.0", features = ["json", "lazy", "serde", "csv", "timezones", "strings", "ipc", "dtype-decimal"], optional = true }
polars-lazy = { version = "0.52.0", features = ["pivot"], optional = true }
polars-ops = { version = "0.52.0", features = ["pivot"], optional = true }

[dev-dependencies]
# 仅测试 / 示例用,不进入下游用户的依赖树。
reqwest = { version = "0.13", default-features = false, features = ["json"] } # dashboard 冒烟测试的 HTTP 客户端
semver = "1"                                     # 下载器门面测试(Version)
serde = { version = "1", features = ["derive"] } # examples 派生 Serialize 输出项

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true


[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
# 内嵌 JS(v8)运行时:门面/示例可跑 Lua 之外的 JS 解析脚本。
js-v8 = ["dep:v8", "dep:tempfile"]
# 以下特性只是把开关“转发”给 mocra-core —— 对应运行时代码都在那里,host 无需再直接依赖
# sea-orm / rdkafka / async-nats / polars / calamine / tower-http。
# 数据帧支持(polars):解锁 `DataFrameStore` / `polars_utils`,并在 prelude 再导出 `::polars::*`。
polars = ["dep:polars", "dep:polars-lazy", "dep:polars-ops", "mocra-core/polars"]
# Excel 解析(calamine → DataFrame),隐含开启 polars(含 host 的 polars 再导出)。
excel = ["polars", "mocra-core/excel"]
# 数据面 Kafka 队列后端(默认关闭 —— 避免 rdkafka 的 cmake/C++ 构建负担)。
queue-kafka = ["mocra-core/queue-kafka"]
# 数据面 NATS(JetStream)队列后端 —— 轻量、无需 Redis,适合内嵌集群的数据面。
queue-nats = ["mocra-core/queue-nats"]
# 数据库 / 多租户元数据存储(sea-orm)。默认关闭 —— 无 DB standalone 模式不需要;
# 开启后解锁 account × platform × module 的 DB 驱动任务模型。
store = ["mocra-core/store"]
# 后台管理 dashboard:开启后 engine 暴露 admin + 可观测 HTTP API(任务 / 集群 / 指标监控)。
dashboard = ["mocra-core/dashboard"]
# 内嵌 redb+Raft 控制面。开启后 `RaftCoordinationBackend` 实现 `CoordinationBackend`,
# 可用自组网的 Raft 集群替换 Redis 协调(锁 / 选举 / KV)。门面用到 `ClusterConfig`,
# 故 host 侧仍需 `dep:mocra-cluster`。
cluster-embedded = ["dep:mocra-cluster", "mocra-core/cluster-embedded"]

[lib]
name = "mocra"
path = "src/lib.rs"

# 门面快速上手(无 DB / 无 Redis 单机)。
[[example]]
name = "spider_quickstart"
path = "examples/spider_quickstart.rs"

# 自定义下载器(实现 Downloader trait,替换/扩展默认 reqwest)。
[[example]]
name = "custom_downloader"
path = "examples/custom_downloader.rs"

# 内嵌集群示例:需 cluster-embedded(用到 `ClusterConfig`)。
[[example]]
name = "cluster_quickstart"
path = "examples/cluster_quickstart.rs"
required-features = ["cluster-embedded"]

# 后台管理 dashboard 示例:需 dashboard(用到 `.dashboard(port)`)。
[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["dashboard"]
