# workspace: the root package (mocra) + the members under crates/.
[workspace]
resolver = "2"
members = ["crates/mocra-cluster", "crates/mocra-proxy", "crates/mocra-dag", "crates/mocra-store", "crates/mocra-core"]

[package]
name = "mocra"
version = "0.4.1"
edition = "2024"
description = "A distributed, event-driven crawling and data collection framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra"
readme = "README.md"
rust-version = "1.85"
keywords = ["crawler", "distributed", "queue", "scraping", "framework"]
categories = ["network-programming", "asynchronous", "web-programming"]
exclude = [
	"target/**",
	"data/**",
	"logs/**",
	"docker-compose.kafka.yml",
	"scripts/**",
	"benchmarks/**",
	".github/**",
	".idea/**",
	".cargo/**",
	".claude/**",
	"*.log",
]

# Feature set for docs.rs builds: covers every feature worth documenting, but **excludes** js-v8
# (embedded C++ v8 build) and queue-kafka (rdkafka needs librdkafka's C build) — both are prone to
# build failures on docs.rs and have a very small public surface.
[package.metadata.docs.rs]
features = ["store", "dashboard", "cluster-embedded", "queue-nats", "polars", "excel"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Runtime: all engine/pipeline logic lives in mocra-core; the host is only a thin facade
# (facade + prelude + per-layer shims). So this list keeps only the dependencies the facade/bin
# use directly, plus feature-gated optional dependencies — everything else (axum, tracing, etc.)
# is a transitive dependency of mocra-core and is no longer declared here.
mocra-core = { path = "crates/mocra-core", version = "0.4.1" }
mocra-proxy = { path = "crates/mocra-proxy", version = "0.4.1" }
# Dependencies used directly by the facade (src/facade.rs, src/prelude.rs, src/lib.rs, src/bin/).
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v7", "zerocopy", "v4"] }
# Global allocator (enabled by the default `mimalloc` feature).
mimalloc = { version = "0.1", default-features = false, optional = true }
# Feature-gated optional dependencies.
mocra-cluster = { path = "crates/mocra-cluster", version = "0.4.1", optional = true } # cluster-embedded: facade ClusterConfig
v8 = { version = "145", optional = true }                          # js-v8: embedded JS runtime
tempfile = { version = "3", optional = true }                      # js-v8: worker temp files
# The polars trio: under the `polars` / `excel` features the host prelude re-exports `::polars::*`
# (so downstream users of DataFrame-related types stay version-aligned), so the host needs a
# direct (optional) dependency on them — compiled only when those features are enabled.
polars = { version = "0.52.0", features = ["json", "lazy", "serde", "csv", "timezones", "strings", "ipc", "dtype-decimal"], optional = true }
polars-lazy = { version = "0.52.0", features = ["pivot"], optional = true }
polars-ops = { version = "0.52.0", features = ["pivot"], optional = true }

[dev-dependencies]
# Tests / examples only; never enters downstream users' dependency trees.
reqwest = { version = "0.13", default-features = false, features = ["json"] } # HTTP client for the dashboard smoke test
scraper = "0.27"                                 # examples: HTML parsing (CSS selectors)
semver = "1"                                     # downloader facade tests (Version)
serde = { version = "1", features = ["derive"] } # examples: derive Serialize for output items

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true


[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
# Embedded JS (v8) runtime: lets the facade/examples run JS parsing scripts alongside Lua.
js-v8 = ["dep:v8", "dep:tempfile"]
# The features below merely "forward" the switch to mocra-core — the corresponding runtime code
# lives there, so the host needs no direct dependency on sea-orm / rdkafka / async-nats / polars /
# calamine / tower-http.
# DataFrame support (polars): unlocks `DataFrameStore` / `polars_utils` and re-exports
# `::polars::*` from the prelude.
polars = ["dep:polars", "dep:polars-lazy", "dep:polars-ops", "mocra-core/polars"]
# Excel parsing (calamine → DataFrame); implies polars (including the host's polars re-export).
excel = ["polars", "mocra-core/excel"]
# Data-plane Kafka queue backend (off by default — avoids rdkafka's cmake/C++ build burden).
queue-kafka = ["mocra-core/queue-kafka"]
# Data-plane NATS (JetStream) queue backend — lightweight, a good fit for an embedded cluster's
# data plane.
queue-nats = ["mocra-core/queue-nats"]
# Database / multi-tenant metadata store (sea-orm). Off by default — the DB-less standalone mode
# does not need it; enabling it unlocks the DB-driven account × platform × module task model.
store = ["mocra-core/store"]
# Admin dashboard: once enabled, the engine exposes the admin + observability HTTP API
# (task / cluster / metrics monitoring).
dashboard = ["mocra-core/dashboard"]
# Embedded redb+Raft control plane. Once enabled, `RaftCoordinationBackend` implements
# `CoordinationBackend`, so a self-forming Raft cluster can handle coordination
# (locks / election / KV). The facade uses `ClusterConfig`, so the host side still needs
# `dep:mocra-cluster`.
cluster-embedded = ["dep:mocra-cluster", "mocra-core/cluster-embedded"]

[lib]
name = "mocra"
path = "src/lib.rs"

# Facade quickstart (single-node, no DB).
[[example]]
name = "spider_quickstart"
path = "examples/spider_quickstart.rs"

# Custom downloader (implement the Downloader trait to replace/extend the default reqwest one).
[[example]]
name = "custom_downloader"
path = "examples/custom_downloader.rs"

# Embedded cluster example: requires cluster-embedded (it uses `ClusterConfig`).
[[example]]
name = "cluster_quickstart"
path = "examples/cluster_quickstart.rs"
required-features = ["cluster-embedded"]

# Admin dashboard example: requires dashboard (it uses `.dashboard(port)`).
[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = ["dashboard"]

# End-to-end example against a real site (quotes.toscrape.com): fetch → parse → store.
# Pagination follow-through + detail-page fan-out + deduplication + typed output + a custom
# DataSink writing to disk; the dashboard feature is optional.
[[example]]
name = "quotes_scraper"
path = "examples/quotes_scraper.rs"
