[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
reqwest_cookie_store.workspace = true
url.workspace = true
dyn-clone.workspace = true
semver.workspace = true
base64.workspace = true

common.workspace = true
utils.workspace = true
errors.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
dashmap.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
engine.workspace = true

[dev-dependencies]
proxy.workspace = true
