[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
futures.workspace = true
log.workspace = true
reqwest_cookie_store.workspace = true
libloading.workspace = true
url.workspace = true
chrono.workspace = true
polars.workspace = true
polars-ops.workspace = true
chrono-tz.workspace = true
axum.workspace = true
utils.workspace = true
errors.workspace = true
queue.workspace = true
proxy.workspace = true
common.workspace = true
sync.workspace = true