[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
futures.workspace = true
log.workspace = true
chrono.workspace = true
polars.workspace = true
axum.workspace = true
utils.workspace = true
errors.workspace = true
queue.workspace = true
common.workspace = true
downloader.workspace = true
cacheable.workspace = true
proxy.workspace = true