[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
sea-orm.workspace = true
futures.workspace = true
log.workspace = true
chrono.workspace = true
polars.workspace = true
axum.workspace = true
utils.workspace = true
errors.workspace = true
queue.workspace = true
common.workspace = true
downloader.workspace = true
cacheable.workspace = true
proxy.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tracing.workspace = true
sync.workspace = true
cron = "0.15"
sysinfo = "0.38"
bloomfilter = "3"
siphasher = "1"
