[project]
name = "mocra-py"
version = "0.1.0"
description = "Python implementation of the Mocra distributed crawler engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.12.0",
    "httpx[http2,socks]>=0.27.0",
    "redis[hiredis]>=5.2.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.13.1",
    "loguru>=0.7.2",
    "orjson>=3.9.15",
    "aiofiles>=25.1.0",
    "click>=8.3.1",
    "apscheduler>=3.11.2",
    "croniter>=6.0.0",
    "psutil>=7.2.1",
    "aiokafka>=0.13.0",
    "uuid6>=2025.0.1",
    "websockets>=16.0",
    "polars>=0.20.0",
    "prometheus-client>=0.24.1",
    "python-multipart>=0.0.9",
    "zstandard>=0.23.0",
    "msgpack>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cacheable", "common", "downloader", "engine", "errors", "js_v8", "modules", "mq", "proxy", "sync", "utils"]

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.33.0",
    "lupa>=2.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "fakeredis[lua]>=2.33.0",
    "lupa>=2.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

