[package]
name = "queue"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde = { workspace = true }
serde_path_to_error = "0.1"
deadpool-redis.workspace = true
rdkafka.workspace = true
futures.workspace = true
log.workspace = true
uuid.workspace = true
once_cell.workspace = true



metrics.workspace = true
errors.workspace = true
utils.workspace = true
common.workspace = true
rand.workspace = true
crc32fast = "1.5.0"
flate2 = "1.1.9"
zstd = { workspace = true }
