[package]
name = "sync"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
errors.workspace = true
dashmap.workspace = true
async-trait.workspace = true
tokio.workspace = true
utils.workspace = true
deadpool-redis.workspace = true
rdkafka.workspace = true
uuid.workspace = true
tracing.workspace = true
metrics.workspace = true
rmp-serde = { workspace = true }
once_cell.workspace = true
common.workspace = true
