[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
common.workspace = true
engine.workspace = true
queue.workspace = true
utils.workspace = true
errors.workspace = true
cacheable.workspace = true
downloader.workspace = true
semver.workspace = true
futures.workspace = true
async-trait.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
sea-orm.workspace = true
uuid.workspace = true
log.workspace = true
serde.workspace = true
polars.workspace = true
mimalloc = { version = "0.1", default-features = false }
wiremock = "0.6"

[[bin]]
name = "tests_debug"
path = "src/main.rs"

[[bin]]
name = "mock_benchmark"
path = "src/mock_benchmark.rs"

[[bin]]
name = "mock_engine_benchmark"
path = "src/mock_engine_benchmark.rs"

[[bin]]
name = "mock_prod_like_benchmark"
path = "src/mock_prod_like_benchmark.rs"

[[bin]]
name = "log_stress"
path = "src/log_stress.rs"







