[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mocra = { path = "..", default-features = false }
mimalloc = { version = "0.1", default-features = false }
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
log = "0.4"
sea-orm = { version = "1", features = ["postgres-array", "runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"] }
semver = { version = "1", features = ["serde"] }
futures = "0.3"
polars = { version = "0.52.0", features = ["json", "lazy", "serde", "csv", "timezones", "strings", "ipc", "dtype-decimal"] }
uuid = { version = "1", features = ["v7"] }

[[bin]]
name = "tests_debug"
path = "src/main.rs"

[[bin]]
name = "mock_benchmark"
path = "src/mock_benchmark.rs"

[[bin]]
name = "mock_engine_benchmark"
path = "src/mock_engine_benchmark.rs"

[[bin]]
name = "mock_prod_like_benchmark"
path = "src/mock_prod_like_benchmark.rs"

[[bin]]
name = "log_stress"
path = "src/log_stress.rs"







