[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
log.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
once_cell.workspace = true
time.workspace  = true
polars.workspace = true
calamine.workspace = true
ring.workspace = true
md5.workspace = true
regex.workspace = true
errors.workspace = true
dashmap.workspace = true
