[package]
name = "mocra-cluster"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "Embedded Raft + redb control plane for the mocra distributed crawler framework: leader election, distributed locks with fencing, membership, partition ownership."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra-cluster"
readme = "README.md"
keywords = ["raft", "cluster", "consensus", "distributed", "redb"]
categories = ["network-programming", "asynchronous", "database-implementations"]

[dependencies]
# Consensus: the de facto standard async Raft for Rust. storage-v2 lets
# RaftLogStorage/RaftStateMachine be implemented directly.
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
# State machine storage: pure Rust, ACID, no C++ toolchain (a lightweight alternative to RocksDB).
redb = "2"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
# Node-to-node control plane RPC (HTTP + msgpack). Control plane traffic is small, so HTTP/msgpack
# is sufficient and self-contained.
# Minimal reqwest features: internal cluster traffic goes over http:// (no TLS needed); features
# are unioned with the workspace's.
axum = "0.8"
reqwest = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
